--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -79,7 +79,7 @@ html {
 .sidebar-about h1 {
   color: #fff;
   margin-top: 0;
-  font-family: 'East Sea Dokdo', cursive;
+  font-family: 'Abril Fatface', serif;
   font-size: 3.25rem;
 }
 
