--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,7 +8,12 @@
       </h1>
       <p class="lead">{{ site.description }}</p>
     </div>
-
+  
+  
+    # Adding a list of links to the pages of the website
+  
+    {% comment %}
+    
     <nav class="sidebar-nav">
       <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ '/' | relative_url }}">Home</a>
 
@@ -39,6 +44,8 @@
       {% include social_links.html %}
 
     </nav>
+  
+    {% endcomment %}
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
