--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,9 +10,7 @@
     </div>
   
   
-    # Adding a list of links to the pages of the website
-  
-    {% comment %}
+     <!-- Adding a list of links to the pages of the website -->
     
     <nav class="sidebar-nav">
       <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ '/' | relative_url }}">Home</a>
