--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,6 +12,8 @@
   
      <!-- Adding a list of links to the pages of the website -->
     
+    <!-- {% comment %}
+  
     <nav class="sidebar-nav">
       <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ '/' | relative_url }}">Home</a>
 
@@ -40,11 +42,13 @@
       <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a> -->
       <!-- <span class="sidebar-nav-item">Currently v{{ site.version }}</span> -->
       
-      {% include social_links.html %}
+      
 
     </nav>
+
+    {% endcomment %}
   
- 
+    {% include social_links.html %}
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
