--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,17 +11,16 @@
   
   
      <!-- Adding a list of links to the pages of the website -->
-    
-    <!-- {% comment %}
   
-    <nav class="sidebar-nav">
-      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ '/' | relative_url }}">Home</a>
+    <!-- <nav class="sidebar-nav">
+      
+      <!-- <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ '/' | relative_url }}">Home</a>
 
       <!-- Manual set order -->
-      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ '/categories' | relative_url }}">Categories</a>
-      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ '/publication' | relative_url }}">Publication</a>
+      <!-- <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ '/categories' | relative_url }}">Categories</a> -->
+      <!-- <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ '/publication' | relative_url }}">Publication</a> -->
       <!-- <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ '/projects' | relative_url }}">Projects</a> -->
-      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ '/about' | relative_url }}">About</a>
+      <!-- <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ '/about' | relative_url }}">About</a> -->
 
       <!-- Uncomment for auto order -->
       <!-- {% comment %}
@@ -44,9 +43,7 @@
       
       
 
-    </nav>
-
-    {% endcomment %}
+     <!-- </nav> -->
   
     {% include social_links.html %}
 
