--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,7 +12,7 @@
   
      <!-- Adding a list of links to the pages of the website -->
   
-    <!-- <nav class="sidebar-nav">
+    <nav class="sidebar-nav">
       
       <!-- <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ '/' | relative_url }}">Home</a>
 
@@ -41,12 +41,10 @@
       <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a> -->
       <!-- <span class="sidebar-nav-item">Currently v{{ site.version }}</span> -->
       
-      
+      {% include social_links.html %}
 
-     <!-- </nav> -->
+     </nav>
   
-    {% include social_links.html %}
-
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
 </div>
