--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,6 +17,10 @@
       <!-- <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ '/' | relative_url }}">Home</a>
 
       <!-- Manual set order -->
+      
+      <a class="sidebar-nav-item" href="https://mreguant.github.io/papers/reguant_cv_extended.pdfblablabla">CV</a>
+      <a class="sidebar-nav-item" href="https://scholar.google.com/citations?user=glc6COYAAAAJ&hl=enblablabla">Google Scholar</i></a>
+      
       <!-- <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ '/categories' | relative_url }}">Categories</a> -->
       <!-- <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ '/publication' | relative_url }}">Publication</a> -->
       <!-- <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ '/projects' | relative_url }}">Projects</a> -->
