--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,6 +2,8 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>
+        <!-- Add a profile picture in the sidebar -->
+        <!--  <img src="/foto/Pello.jpeg" alt="Pello"> -->
         <!-- <a href="{{ '/' | relative_url }}"> -->
           {{ site.title }}
         </a>
