--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,7 +21,7 @@
       <!-- Manual set order -->
       
       <a class="sidebar-nav-item" href="https://mreguant.github.io/papers/reguant_cv_extended.pdfblablabla">CV</a>
-      <a class="sidebar-nav-item" href="https://scholar.google.com/citations?user=glc6COYAAAAJ&hl=enblablabla">Google Scholar</i></a>
+      <a class="sidebar-nav-item" href="https://scholargoogle.com/citations?user=glc6COYAAAAJ&hl=enblablabla">Google Scholar</i></a>
       
       <!-- <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ '/categories' | relative_url }}">Categories</a> -->
       <!-- <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ '/publication' | relative_url }}">Publication</a> -->
