--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,7 +3,8 @@
     <div class="sidebar-about">
       <h1>
         <!-- Add a profile picture in the sidebar -->
-        <!--  <img src="/foto/Pello.jpeg" alt="Pello"> -->
+        <img src="/photo/PELLO (53).jpeg" alt="Pello"> 
+        
         <!-- <a href="{{ '/' | relative_url }}"> -->
           {{ site.title }}
         </a>
