--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,7 +3,7 @@
     <div class="sidebar-about">
       <h1>
         <!-- Add a profile picture in the sidebar -->
-        <img src="/photos/PELLO (53).jpeg" alt="Pello"> 
+        <img src="/photos/PELLO (53).jpg" alt="Pello"> 
         
         <!-- <a href="{{ '/' | relative_url }}"> -->
           {{ site.title }}
