--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,7 +4,7 @@
       <h1>
         <!-- Add a profile picture in the sidebar -->
         <img src="/photos/PELLO (53).jpg" alt="Pello"> 
-        
+        <a href="{{ site.baseurl }}">
         <!-- <a href="{{ '/' | relative_url }}"> -->
           {{ site.title }}
         </a>
