--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,11 +2,12 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>
-          {{ site.title }}
         <!-- Add a profile picture in the sidebar -->
         <img src="/photos/PELLO (53).jpg" alt="Pello"> 
         <a href="{{ site.baseurl }}">
         <!-- <a href="{{ '/' | relative_url }}"> -->
+        <!-- Add page title -->
+        {{ site.title }} 
         </a>
       </h1>
       <p class="lead">{{ site.description }}</p>
