--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,6 @@
 <div class="sidebar">
-  <div class="container sidebar-sticky">
+  <!-- <div class="container sidebar-sticky"> This line fixes the sidebar, with the disadvantage of it not fitting some screen proportions -->
+  <div class="container"> <!-- This line allows the sidebar to scroll freely with the website -->
     <div class="sidebar-about">
       <h1>
         <!-- Add a profile picture in the sidebar -->
