--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -161,6 +161,7 @@ a.sidebar-nav-item:active {
 @media (min-width: 48em) {
   .content {
     /*max-width: 40rem; */
+    max-width: 100rem;
     margin-left: 20rem;
     margin-right: 2rem;
   }
