--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,7 +4,7 @@
     <div class="sidebar-about">
       <h1>
         <!-- Add a profile picture in the sidebar -->
-        <!-- <img src="/photos/PELLO (53).jpg" alt="Pello" class="inline"/>  -->
+        <img src="/photos/PELLO (53).jpg" alt="Pello" class="inline"/>
         <!-- <a href="{{ site.baseurl }}"> -->
         <!-- <a href="{{ '/' | relative_url }}"> -->
         <!-- Add page title -->
@@ -23,8 +23,9 @@
 
       <!-- Manual set order -->
       
+      <!-- Links to CV, Google Scholar 
       <a class="sidebar-nav-item" href="https://mreguant.github.io/papers/reguant_cv_extended.pdfblablabla">CV</a>
-      <a class="sidebar-nav-item" href="https://scholargoogle.com/citations?user=glc6COYAAAAJ&hl=enblablabla">Google Scholar</i></a>
+      <!-- <a class="sidebar-nav-item" href="https://scholargoogle.com/citations?user=glc6COYAAAAJ&hl=enblablabla">Google Scholar</i></a> -->
       
       <!-- <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ '/categories' | relative_url }}">Categories</a> -->
       <!-- <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ '/publication' | relative_url }}">Publication</a> -->
@@ -54,6 +55,7 @@
 
      </nav>
   
-    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
+    <!-- Copyright sign -->
+    <!-- <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p> -->
   </div>
 </div>
