--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,7 +4,8 @@
     <div class="sidebar-about">
       <h1>
         <!-- Add a profile picture in the sidebar -->
-        <img src="/photos/PELLO (53).jpg" alt="Pello" class="inline"/>
+        <!-- <img src="/photos/PELLO (53).jpg" alt="Pello" class="inline"/> --> <!---  Vertical pic  --->
+        <img src="/photos/PELLO (82).jpg" alt="Pello" class="inline"/> <!---  horizontal pic, close face  --->
         <!-- <a href="{{ site.baseurl }}"> -->
         <!-- <a href="{{ '/' | relative_url }}"> -->
         <!-- Add page title -->
