--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,8 +23,10 @@
   <link rel="stylesheet" href="{{ '/' | relative_url }}public/css/poole.css">
   <link rel="stylesheet" href="{{ '/' | relative_url }}public/css/syntax.css">
   <link rel="stylesheet" href="{{ '/' | relative_url }}public/css/hyde.css">
+  
+  <!-- Setting up font types -->
   <link href="https://fonts.googleapis.com/css?family=East+Sea+Dokdo&display=swap" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.0/css/all.min.css" rel="stylesheet">
+  <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.0/css/all.min.css" rel="stylesheet"> -->
 
 
 
