--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,7 +26,8 @@
   
   <!-- Setting up font types -->
   <link href="https://fonts.googleapis.com/css?family=East+Sea+Dokdo&display=swap" rel="stylesheet">
-  <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.0/css/all.min.css" rel="stylesheet"> -->
+  <!--  Font awesome is the icon library -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.0/css/all.min.css" rel="stylesheet">
 
 
 
