--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -79,7 +79,9 @@ html {
 .sidebar-about h1 {
   color: #fff;
   margin-top: 0;
-  font-family: 'Abril Fatface', serif;
+  /* The following line changes the font type of the website title in the sidebar */
+  /* font-family: 'Abril Fatface', serif; */
+  font-family: 'Roboto', sans-serif;
   font-size: 3.25rem;
 }
 
