--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -89,7 +89,8 @@ html {
   margin-top: 0;
   /* The following line changes the font type of the website title in the sidebar */
   /* font-family: 'Abril Fatface', serif; */
-  font-family: 'Roboto', sans-serif;
+  /* font-family: 'Roboto', sans-serif; */
+  font-family: 'rss'; 
   font-size: 3.25rem;
 }
 
