--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -92,6 +92,7 @@ html {
   /* font-family: 'Abril Fatface', serif; */
   /* font-family: 'Roboto', sans-serif; */
   font-family: 'RotisSemiSans'; 
+  font-weight:normal;
   font-size: 3.25rem;
 }
 
