--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -91,7 +91,8 @@ html {
   /* The following line changes the font type of the website title in the sidebar */
   /* font-family: 'Abril Fatface', serif; */
   /* font-family: 'Roboto', sans-serif; */
-  font-family: 'RotisSemiSans'; 
+  font-family: 'PT Sans', sans-serif;
+  /*font-family: 'RotisSemiSans';  */
   font-weight:sans-serif;
   font-size: 3.25rem;
 }
