--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -53,7 +53,8 @@
       <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a> -->
       <!-- <span class="sidebar-nav-item">Currently v{{ site.version }}</span> -->
       
-      {% include social_links.html %}
+      <!-- Social buttons: twitter, github, linkedin... -->
+      <!-- {% include social_links.html %} -->
 
      </nav>
   
