--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -54,7 +54,7 @@
       <!-- <span class="sidebar-nav-item">Currently v{{ site.version }}</span> -->
       
       <!-- Social buttons: twitter, github, linkedin... -->
-      <!-- {% include social_links.html %} -->
+      {% include social_links.html %}
 
      </nav>
   
