--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -54,6 +54,15 @@ html {
   }
 }
 
+/*
+ * Filter for svg icons
+ *
+ * Define filter.green for turning svg icons into green ?
+ */
+
+.filter-green{
+    filter: invert(48%) sepia(79%) saturate(2476%) hue-rotate(86deg) brightness(118%) contrast(119%);
+}
 
 /*
  * Sidebar
