--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -59,10 +59,11 @@ html {
  * Define filter.green for turning svg icons into green ?
  * Check more: https://stackoverflow.com/questions/22252472/how-can-i-change-the-color-of-an-svg-element
  */
-
-.filter-green{
-    filter: invert(48%) sepia(79%) saturate(2476%) hue-rotate(86deg) brightness(118%) contrast(119%);
-}
+/*
+ * .filter-green{
+ *     filter: invert(48%) sepia(79%) saturate(2476%) hue-rotate(86deg) brightness(118%) contrast(119%);
+ * }
+ */
 
 /*
  * Sidebar
