--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -239,13 +239,28 @@ img {
 }
 
 /*
- * Filter for svg icons
+ * Filters for svg icons
  * Define filter.green for turning svg icons into green ?
  * Check more: https://stackoverflow.com/questions/22252472/how-can-i-change-the-color-of-an-svg-element
  */
 
 .filter-green{
     filter: invert(48%) sepia(79%) saturate(2476%) hue-rotate(86deg) brightness(118%) contrast(119%);
+}
+
+/* White colour: HEX #ffffff */
+.filter-white{
+    filter: invert(100%) sepia(0%) saturate(1%) hue-rotate(342deg) brightness(109%) contrast(101%);
+}
+
+/* Dark gray colour: HEX #202020 */
+.filter-gray-dark{
+    filter: invert(0%) sepia(14%) saturate(5%) hue-rotate(296deg) brightness(99%) contrast(75%);
+}
+
+/* Light gray colour: HEX #909090 */
+.filter-gray-light{
+    filter: invert(49%) sepia(37%) saturate(0%) hue-rotate(195deg) brightness(107%) contrast(90%);
 }
 
 /* Tables */
