--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -60,7 +60,7 @@
       <a href="https://twitter.com/pelloaspuru" target="_blank"><img src="/icons/twitter.svg" style="float: right; margin-right: 10px;" width="20" height="20" class="filter-gray-light"></a>
       <a href="mailto:pello.aspuru@cemfi.edu.es" target="_blank"><img src="/icons/envelope-solid.svg" style="float: right; margin-right: 10px;" width="20" height="20" class="filter-gray-light"></a>
       <a href="/documents/CV.pdf" target="_blank"><img src="/icons/file-solid.svg" style="float: right; margin-right: 10px;" width="20" height="20" class="filter-gray-light"></a>
-      <a href="https://www.linkedin.com/in/pelloaspuru" target="_blank"><img src="/icons/linkedin.svg" style="float: right;" width="20" height="20" class="filter-gray-light"></a>
+      <a href="https://www.linkedin.com/in/pelloaspuru" target="_blank"><img src="/icons/linkedin.svg" style="float: right; margin-right: 10px;" width="20" height="20" class="filter-gray-light"></a>
       
       <!-- Social buttons: twitter, github, linkedin... -->
       <!-- {% include social_links.html %} -->
