--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,11 +16,11 @@
       <p class="lead">{{ site.description }}</p>
       </h1>
       <a href="https://www.linkedin.com/in/pelloaspuru" target="_blank"><img src="/icons/linkedin.svg" width="25" height="25" class="filter-gray-light"></a>
-      <a href="https://twitter.com/pelloaspuru" target="_blank"><img src="/icons/twitter.svg" style="style="margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>
-      <a href="https://github.com/pelloaspuru" target="_blank"><img src="/icons/github.svg" style="margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>
+      <a href="https://twitter.com/pelloaspuru" target="_blank"><img src="/icons/twitter.svg" style="style="float: left; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>
+      <a href="https://github.com/pelloaspuru" target="_blank"><img src="/icons/github.svg" style="float: left; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>
       <!---  In the case of the email button, we do not want it to pop up a new tab  --->
-      <a href="mailto:pello.aspuru@cemfi.edu.es"><img src="/icons/envelope-solid.svg" style="margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>      
-      <a href="/documents/CV.pdf" target="_blank"><img src="/icons/file-solid.svg" style="margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>
+      <a href="mailto:pello.aspuru@cemfi.edu.es"><img src="/icons/envelope-solid.svg" style="float: left; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>      
+      <a href="/documents/CV.pdf" target="_blank"><img src="/icons/file-solid.svg" style="float: left; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>
     </div>
         
      <!-- Adding a list of links to the pages of the website -->
