--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,8 +15,11 @@
       </h1>
       <p class="lead">{{ site.description }}</p>
       </h1>
+      <!-- Social buttons: twitter, github, linkedin... -->
+      <!---  target="_blank": The links pop um in new tabs  --->
+      <!---  style="float: left; margin-right: 30px;": Allows for space between icons  --->
       <a href="https://www.linkedin.com/in/pelloaspuru" target="_blank"><img src="/icons/linkedin.svg" width="25" height="25" class="filter-gray-light"></a>
-      <a href="https://twitter.com/pelloaspuru" target="_blank"><img src="/icons/twitter.svg" style="style="float: left; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>
+      <a href="https://twitter.com/pelloaspuru" target="_blank"><img src="/icons/twitter.svg" style="float: left; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>
       <a href="https://github.com/pelloaspuru" target="_blank"><img src="/icons/github.svg" style="float: left; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>
       <!---  In the case of the email button, we do not want it to pop up a new tab  --->
       <a href="mailto:pello.aspuru@cemfi.edu.es"><img src="/icons/envelope-solid.svg" style="float: left; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>      
@@ -58,17 +61,7 @@
       
       <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a> -->
       <!-- <span class="sidebar-nav-item">Currently v{{ site.version }}</span> -->
-      
-      <!-- Social buttons: twitter, github, linkedin... -->
-      <!---  target="_blank": The links pop um in new tabs  --->
-      <!---  style="float: left; margin-right: 30px;": Allows for space between icons  --->
-      <a href="https://www.linkedin.com/in/pelloaspuru" target="_blank"><img src="/icons/linkedin.svg" width="25" height="25" class="filter-gray-light"></a>
-      <a href="https://twitter.com/pelloaspuru" target="_blank"><img src="/icons/twitter.svg" style="style="float: center; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>
-      <a href="https://github.com/pelloaspuru" target="_blank"><img src="/icons/github.svg" style="float: center; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>
-      <!---  In the case of the email button, we do not want it to pop up a new tab  --->
-      <a href="mailto:pello.aspuru@cemfi.edu.es"><img src="/icons/envelope-solid.svg" style="float: center; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>      
-      <a href="/documents/CV.pdf" target="_blank"><img src="/icons/file-solid.svg" style=float: center; "margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>
-      
+
       <!-- Social buttons: twitter, github, linkedin... -->
       <!-- {% include social_links.html %} -->
 
