--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -24,7 +24,9 @@
       <!---  In the case of the email button, we do not want it to pop up a new tab  --->
       <a href="mailto:pello.aspuru@cemfi.edu.es"><img src="/icons/envelope-solid.svg" style="float; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>      
       <a href="/documents/CV.pdf" target="_blank"><img src="/icons/file-solid.svg" style="float; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>
-    </div>
+    <!---  Blank line  --->
+    <br/>   
+</div>
         
      <!-- Adding a list of links to the pages of the website -->
   
