--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -19,11 +19,11 @@
       <!---  target="_blank": The links pop um in new tabs  --->
       <!---  style="float: left; margin-right: 30px;": Allows for space between icons  --->
       <a href="https://www.linkedin.com/in/pelloaspuru" target="_blank"><img src="/icons/linkedin.svg" width="25" height="25" class="filter-gray-light"></a>
-      <a href="https://twitter.com/pelloaspuru" target="_blank"><img src="/icons/twitter.svg" style="float; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>
-      <a href="https://github.com/pelloaspuru" target="_blank"><img src="/icons/github.svg" style="float; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>
+      <a href="https://twitter.com/pelloaspuru" target="_blank"><img src="/icons/twitter.svg" style="float: right; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>
+      <a href="https://github.com/pelloaspuru" target="_blank"><img src="/icons/github.svg" style="float: right; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>
       <!---  In the case of the email button, we do not want it to pop up a new tab  --->
-      <a href="mailto:pello.aspuru@cemfi.edu.es"><img src="/icons/envelope-solid.svg" style="float; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>      
-      <a href="/documents/CV.pdf" target="_blank"><img src="/icons/file-solid.svg" style="float; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>
+      <a href="mailto:pello.aspuru@cemfi.edu.es"><img src="/icons/envelope-solid.svg" style="float: right; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>      
+      <a href="/documents/CV.pdf" target="_blank"><img src="/icons/file-solid.svg" style="float: right; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>
     <!---  Blank line  --->
     <br/>   
 </div>
