--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -18,7 +18,7 @@
       <!-- Social buttons: twitter, github, linkedin... -->
       <!---  target="_blank": The links pop um in new tabs  --->
       <!---  style="float: left; margin-right: 30px;": Allows for space between icons  --->
-      <a href="https://www.linkedin.com/in/pelloaspuru" target="_blank"><img src="/icons/linkedin.svg" style="float: right; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>
+      <a href="https://www.linkedin.com/in/pelloaspuru" target="_blank"><img src="/icons/linkedin.svg" style="float: right;" width="25" height="25" class="filter-gray-light"></a>
       <a href="https://twitter.com/pelloaspuru" target="_blank"><img src="/icons/twitter.svg" style="float: right; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>
       <a href="https://github.com/pelloaspuru" target="_blank"><img src="/icons/github.svg" style="float: right; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>
       <!---  In the case of the email button, we do not want it to pop up a new tab  --->
