--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,6 +15,7 @@
       </h1>
       <p class="lead">{{ site.description }}</p>
       </h1>
+      <p class="lead">{{
       <!-- Social buttons: twitter, github, linkedin... -->
       <!---  target="_blank": The links pop um in new tabs  --->
       <!---  style="float: left; margin-right: 30px;": Allows for space between icons  --->
@@ -24,6 +25,7 @@
       <!---  In the case of the email button, we do not want it to pop up a new tab  --->
       <a href="mailto:pello.aspuru@cemfi.edu.es"><img src="/icons/envelope-solid.svg" style="float: right; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>      
       <a href="/documents/CV.pdf" target="_blank"><img src="/icons/file-solid.svg" style="float: right; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>
+      }}</p>
     <!---  Blank line  --->
     <br/>   
 </div>
