--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,6 +13,7 @@
         {{ site.title }} 
         </a>
       </h1>
+      <!-- p starts a new paragraph -->
       <p class="lead">{{ site.description }}</p>
       </h1>
       <p class="lead">{{
