--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,20 +12,10 @@
         <!-- Add page title -->
         {{ site.title }} 
       </h1>
+      
       <!-- p starts a new paragraph -->
       <p class="lead">{{ site.description }}</p>
       <!-- <p class="lead">{{ -->
-      
-      <h1>
-        <!-- Add a profile picture in the sidebar -->
-        <!-- <img src="/photos/PELLO (53).jpg" alt="Pello" class="inline"/>  --> <!---  Vertical pic, original  --->
-        <img src="/photos/PELLO (53) black_white.jpg" alt="Pello" class="inline"/>  <!---  Vertical pic, black and white  --->
-        <!-- <img src="/photos/PELLO (82).jpg" alt="Pello" class="inline"/> --> <!---  horizontal pic, close face  --->
-        <!-- <a href="{{ site.baseurl }}"> -->
-        <!-- <a href="{{ '/' | relative_url }}"> -->
-        <!-- Add page title -->
-        {{ site.title }} 
-      </h1>
       
       <!-- Social buttons: twitter, github, linkedin... -->
       <!---  target="_blank": The links pop um in new tabs  --->
@@ -33,12 +23,7 @@
       <h1>
       <img src="/icons/linkedin.svg" style="float: right;" width="25" height="25" class="filter-gray-light" href="https://www.linkedin.com/in/pelloaspuru" target="_blank"> 
       </h1>
-      <a href="https://www.linkedin.com/in/pelloaspuru" target="_blank"><img src="/icons/linkedin.svg" style="float: right;" width="25" height="25" class="filter-gray-light"></a>
-      <a href="https://twitter.com/pelloaspuru" target="_blank"><img src="/icons/twitter.svg" style="float: right; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>
-      <a href="https://github.com/pelloaspuru" target="_blank"><img src="/icons/github.svg" style="float: right; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>
-      <!---  In the case of the email button, we do not want it to pop up a new tab  --->
-      <a href="mailto:pello.aspuru@cemfi.edu.es"><img src="/icons/envelope-solid.svg" style="float: right; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>      
-      <a href="/documents/CV.pdf" target="_blank"><img src="/icons/file-solid.svg" style="float: right; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>
+
       <!-- }}</p> -->
     <!---  Blank line  --->
     <br/>   
@@ -83,7 +68,8 @@
       <!-- Social buttons: twitter, github, linkedin... -->
       <!-- {% include social_links.html %} -->
 
-     </nav>
+     <!-- Page navigation buttons. -->
+     <!--  </nav> -->
   
     <!-- Copyright sign -->
     <!-- <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p> -->
