--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -23,6 +23,11 @@
       <h1>
       <img src="/icons/linkedin.svg" style="float: right;" width="25" height="25" class="filter-gray-light" href="https://www.linkedin.com/in/pelloaspuru" target="_blank"> 
       </h1>
+      
+      <h1>
+       <a href="https://www.linkedin.com/in/pelloaspuru" target="_blank"><img src="/icons/linkedin.svg" style="float: right;" width="25" height="25" class="filter-gray-light"></a>
+       <a href="https://twitter.com/pelloaspuru" target="_blank"><img src="/icons/twitter.svg" style="float: right; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>
+      <\h1>
 
       <!-- }}</p> -->
     <!---  Blank line  --->
