--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,22 +17,20 @@
       <p class="lead">{{ site.description }}</p>
       <!-- <p class="lead">{{ -->
       
-      <!-- Social buttons: twitter, github, linkedin... -->
-      <!---  target="_blank": The links pop um in new tabs  --->
-      <!---  style="float: left; margin-right: 30px;": Allows for space between icons  --->
-      <h1>
-      <img src="/icons/linkedin.svg" style="float: right;" width="25" height="25" class="filter-gray-light" href="https://www.linkedin.com/in/pelloaspuru" target="_blank"> 
-      </h1>
-      
-      <h1>
-       <a href="https://www.linkedin.com/in/pelloaspuru" target="_blank"><img src="/icons/linkedin.svg" style="float: right;" width="25" height="25" class="filter-gray-light"></a>
-       <a href="https://twitter.com/pelloaspuru" target="_blank"><img src="/icons/twitter.svg" style="float: right; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>
-      <\h1>
-
-      <!-- }}</p> -->
-    <!---  Blank line  --->
-    <br/>   
 </div>
+    
+  <!-- Social buttons: twitter, github, linkedin... -->
+  <!---  target="_blank": The links pop um in new tabs  --->
+  <!---  style="float: left; margin-right: 30px;": Allows for space between icons  --->
+  <a href="https://www.linkedin.com/in/pelloaspuru" target="_blank"><img src="/icons/linkedin.svg" style="float: right;" width="25" height="25" class="filter-gray-light"></a>
+  <a href="https://twitter.com/pelloaspuru" target="_blank"><img src="/icons/twitter.svg" style="float: right; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>
+  <a href="https://github.com/pelloaspuru" target="_blank"><img src="/icons/github.svg" style="float: right; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>
+  <!---  In the case of the email button, we do not want it to pop up a new tab  --->
+  <a href="mailto:pello.aspuru@cemfi.edu.es"><img src="/icons/envelope-solid.svg" style="float: right; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>      
+  <a href="/documents/CV.pdf" target="_blank"><img src="/icons/file-solid.svg" style="float: right; margin-right: 10px;" width="25" height="25" class="filter-gray-light"></a>    
+  
+  <!---  Blank line  --->
+  <br/>  
         
     <!-- Adding a list of links to the pages of the website -->
   
