--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -23,7 +23,8 @@
   <!---  target="_blank": The links pop um in new tabs  --->
   <!---  style="float: left; margin-right: 30px;": Allows for space between icons  --->
   <img src="/icons/linkedin.svg" style="float: right;" width="25" height="25" class="filter-gray-light" href="https://www.linkedin.com/in/pelloaspuru" target="_blank" />  
-  
+  <a href="https://www.linkedin.com/in/pelloaspuru" target="_blank"><img src="/icons/linkedin.svg" style="float: right;" width="25" height="25" class="filter-gray-light"></a>
+
   </div>    
       
   <a href="https://www.linkedin.com/in/pelloaspuru" target="_blank"><img src="/icons/linkedin.svg" style="float: right;" width="25" height="25" class="filter-gray-light"></a>
