--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -54,9 +54,10 @@
       <a href="https://twitter.com/pelloaspuru" target="_blank"><img src="/icons/twitter.svg" style="margin-right: 10px;" width="20" height="20" class="filter-gray-light"></a>
       <a href="https://github.com/pelloaspuru" target="_blank"><img src="/icons/github.svg" style="margin-right: 10px;" width="20" height="20" class="filter-gray-light"></a>
       <!---  In the case of the email button, we do not want it to pop up a new tab  --->
-      <a href="mailto:pello.aspuru@cemfi.edu.es"><img src="/icons/envelope-solid.svg" style="float: right; margin-right: 10px;" width="20" height="20" class="filter-gray-light"></a>      
-      <a href="/documents/CV.pdf" target="_blank"><img src="/icons/file-solid.svg" style="float: right; margin-right: 10px;" width="20" height="20" class="filter-gray-light"></a>
+      <a href="mailto:pello.aspuru@cemfi.edu.es"><img src="/icons/envelope-solid.svg" style="margin-right: 10px;" width="20" height="20" class="filter-gray-light"></a>      
+      <a href="/documents/CV.pdf" target="_blank"><img src="/icons/file-solid.svg" style="margin-right: 10px;" width="20" height="20" class="filter-gray-light"></a>
      
+      <br/>
       
       <!-- Social buttons: twitter, github, linkedin... -->
       <!---  target="_blank": The links pop um in new tabs  --->
