--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -23,7 +23,7 @@
       <!-- Links to CV, Google Scholar 
       <a class="sidebar-nav-item" href="https://mreguant.github.io/papers/reguant_cv_extended.pdfblablabla">CV</a>
       <!-- <a class="sidebar-nav-item" href="https://scholargoogle.com/citations?user=glc6COYAAAAJ&hl=enblablabla">Google Scholar</i></a> -->
-      
+     
       <!-- <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ '/categories' | relative_url }}">Categories</a> -->
       <!-- <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ '/publication' | relative_url }}">Publication</a> -->
       <!-- <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ '/projects' | relative_url }}">Projects</a> -->
@@ -51,12 +51,11 @@
       <!---  target="_blank": The links pop um in new tabs  --->
       <!---  style="float: left; margin-right: 30px;": Allows for space between icons  --->
       <a href="https://www.linkedin.com/in/pelloaspuru" target="_blank"><img src="/icons/linkedin.svg" style = "white-space: nowrap;" width="20" height="20" class="filter-gray-light"></a>
-
       <a href="https://twitter.com/pelloaspuru" target="_blank"><img src="/icons/twitter.svg" style="white-space: nowrap; margin-right: 10px;" width="20" height="20" class="filter-gray-light"></a>
-      <a href="https://github.com/pelloaspuru" target="_blank"><img src="/icons/github.svg" style="margin-right: 10px;" width="20" height="20" class="filter-gray-light"></a>
+      <a href="https://github.com/pelloaspuru" target="_blank"><img src="/icons/github.svg" style= white-space: nowrap;"margin-right: 10px;" width="20" height="20" class="filter-gray-light"></a>
       <!---  In the case of the email button, we do not want it to pop up a new tab  --->
-      <a href="mailto:pello.aspuru@cemfi.edu.es"><img src="/icons/envelope-solid.svg" style="margin-right: 10px;" width="20" height="20" class="filter-gray-light"></a>      
-      <a href="/documents/CV.pdf" target="_blank"><img src="/icons/file-solid.svg" style="margin-right: 10px;" width="20" height="20" class="filter-gray-light"></a>
+      <a href="mailto:pello.aspuru@cemfi.edu.es"><img src="/icons/envelope-solid.svg" style="white-space: nowrap; margin-right: 10px;" width="20" height="20" class="filter-gray-light"></a>      
+      <a href="/documents/CV.pdf" target="_blank"><img src="/icons/file-solid.svg" style="white-space: nowrap; margin-right: 10px;" width="20" height="20" class="filter-gray-light"></a>
      
       <br/>
       
