--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,7 +15,7 @@
       </h1>
       <p class="lead">{{ site.description }}</p>
     
-    <nav class="sidebar-nav">
+    <body>
       
       <!-- <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ '/' | relative_url }}">Home</a>
       <!-- Manual set order -->
@@ -72,7 +72,7 @@
       <!-- Social buttons: twitter, github, linkedin... -->
       <!-- {% include social_links.html %} -->
 
-     </nav>
+     </body>
     
     <!---  Blank line  --->
     <br/>
