--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,11 +9,12 @@
         <!-- <img src="/photos/PELLO (82).jpg" alt="Pello" class="inline"/> --> <!---  horizontal pic, close face  --->
         <!-- <a href="{{ site.baseurl }}"> -->
         <!-- <a href="{{ '/' | relative_url }}"> -->
+        
         <!-- Add page title -->
-        {{ site.title }} 
+        {{ PALM }} 
         </a>
       </h1>
-      <p class="lead">{{ site.description }}</p>
+      <p class="lead">{{ PhD student, CEMFI }}</p>
     
     <body>
       
