--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,10 +11,10 @@
         <!-- <a href="{{ '/' | relative_url }}"> -->
         
         <!-- Add page title -->
-        {{ PALM }} 
+        {{ site.title }} 
         </a>
       </h1>
-      <p class="lead">{{ PhD student, CEMFI }}</p>
+      <p class="lead">{{ site.description }}</p>
     
     <body>
       
