--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,8 +10,8 @@
         <!-- <a href="{{ '/' | relative_url }}"> -->
        <!-- Add page title -->
        <h2>
+        <p style="color :white;">  
         {{ site.title }} 
-        </a>
       </h2>
       <p class="lead">{{ site.description }}</p>
     
