--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,7 +10,7 @@
         <!-- <a href="{{ '/' | relative_url }}"> -->
        <!-- Add page title -->
        <h2>
-        <p style="color :white;">  
+        <p style="color :white; font-size: 3.25rem">  
         {{ site.title }} 
       </h2>
       <p class="lead">{{ site.description }}</p>
