--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,7 +10,7 @@
         <!-- <a href="{{ '/' | relative_url }}"> -->
        <!-- Add page title -->
        <h3>
-        <p style="color :white; font-size: 2.5rem"> {{ site.title }}
+        <p style="color :white; font-size: 2.rem"> {{ site.title }}
       </h3>
       <p class="lead">{{ site.description }}</p>
     
