--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,9 +10,11 @@
         <!-- <a href="{{ '/' | relative_url }}"> -->
        <!-- Add page title -->
        <h3>
-        <p style="color :white; font-size: 2.rem"> {{ site.title }}
+        <p style="color :white; font-size: 2.rem"> Pello Aspuru <!--{{ site.title }} -->
       </h3>
-      <p class="lead">{{ site.description }}</p>
+      <!-- Add page subtitle title -->
+      <p style="font-size: 2.rem" class="lead">{{ site.description }}
+      </p>
     
     <body>
       
