--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,7 +13,7 @@
         <p style="color :white; font-size: 2.rem"> Pello Aspuru <!--{{ site.title }} -->
       </h3>
       <!-- Add page subtitle title -->
-      <p style="font-size: 2.rem" class="lead">{{ site.description }}
+      <p style="font-size: 1.25rem" class="lead">{{ site.description }}
       </p>
     
     <body>
