--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,7 +13,7 @@
         <p style="color :white; font-size: 2rem; margin-bottom: 1px;"> Pello Aspuru <!--{{ site.title }} -->
       </h3>
       <!-- Add page subtitle title -->
-      <p style="font-size: 1.25rem" class="lead"> PhD Student in Economics, CEMFI <!--{{ site.description }} -->
+      <p style="font-size: 1.25rem" class="lead"> PhD Student, CEMFI <!--{{ site.description }} -->
       </p>
     
     <body>
