--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -61,26 +61,15 @@
       <!-- Social buttons: twitter, github, linkedin... -->
       <!-- {% include social_links.html %} -->
       
-      <nav class="sidebar-nav">
-      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">About</a>
+      <div class="sidebar">
+      <ul>
+    <li><a href="about.html">About Me</a></li>
+    <li><a href="index.html">Research</a></li>
+    <li><a href="projects.html">Teaching</a></li>
+    <li><a href="projects.html">Policy</a></li>
+    </ul>
+    </div>
 
-      {% comment %}
-        The code below dynamically generates a sidebar nav of pages with
-        `layout: page` in the front-matter. See readme for usage.
-      {% endcomment %}
-
-      {% assign pages_list = site.pages %}
-      {% for node in pages_list %}
-        {% if node.title != null %}
-          {% if node.layout == "page" %}
-            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">Research</a>
-          {% endif %}
-        {% endif %}
-      {% endfor %}
-
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Teaching</a>
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}">Policy</a>
-    </nav>
 
      </body>
     <!---  Blank line  --->
