--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -61,13 +61,11 @@
       <!-- Social buttons: twitter, github, linkedin... -->
       <!-- {% include social_links.html %} -->
       
-      <div class="sidebar">
-      <ul>
-    <li><a href="about.html">About Me</a></li>
-    <li><a href="index.html">Research</a></li>
-    <li><a href="projects.html">Teaching</a></li>
-    <li><a href="projects.html">Policy</a></li>
-    </ul>
+    <div class="sidebar">
+    <a href="about.html">About Me</a></li>
+    <a href="index.html">Research</a></li>
+    <a href="projects.html">Teaching</a></li>
+    <a href="projects.html">Policy</a></li>
     </div>
 
 
