--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -61,7 +61,7 @@
       <!-- Social buttons: twitter, github, linkedin... -->
       <!-- {% include social_links.html %} -->
       
-    <a href="about.html">About Me</a></li>
+    <a href="about.html">About</a></li>
     <a href="index.html">Research</a></li>
     <a href="projects.html">Teaching</a></li>
     <a href="projects.html">Policy</a></li>
