--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -60,9 +60,9 @@
 
       <!-- Social buttons: twitter, github, linkedin... -->
       <!-- {% include social_links.html %} -->
-      
-      [click on this link](#research)
-      
+
+    <a href="#research">Research</a></li>
+
     <a href="about.html">About</a></li>
     <a href="index.html">Research</a></li>
     <a href="projects.html">Teaching</a></li>
