--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -60,13 +60,15 @@
 
       <!-- Social buttons: twitter, github, linkedin... -->
       <!-- {% include social_links.html %} -->
-
+    
+    <!-- Index -->
+    
+    <a href="##welcome!">About</a></li>
+    
     <a href="#research">Research</a></li>
-
-    <a href="about.html">About</a></li>
-    <a href="index.html">Research</a></li>
-    <a href="projects.html">Teaching</a></li>
-    <a href="projects.html">Policy</a></li>
+    <a href="research">Research</a></li>
+    <a href="#teaching">Teaching</a></li>
+    <a href="#policy-work-and-others">Policy</a></li>
 
      </body>
     <!---  Blank line  --->
