--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -63,11 +63,11 @@
     
     <!-- Index -->
     
-    <a href="##welcome!">About</a></li>
+    <li><a href="##welcome!">About</a></li>
     
-    <a href="#research">Research</a></li>
-    <a href="#teaching">Teaching</a></li>
-    <a href="#policy-work-and-others">Policy</a></li>
+    <li><a href="#research">Research</a></li>
+    <li><a href="#teaching">Teaching</a></li>
+    <li><a href="#policy-work-and-others">Policy</a></li>
 
      </body>
     <!---  Blank line  --->
