--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -66,6 +66,7 @@
     <li><a href="##welcome!">About</a></li>
     
     <li><a href="#research">Research</a></li>
+    <li><a href="##job-market-paper">JMP</a></li>
     <li><a href="#teaching">Teaching</a></li>
     <li><a href="#policy-work-and-others">Policy</a></li>
 
